gccida/c1/recog_24
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31117:10: error: conflicting types for 'recog_24'
__int64  recog_24( rtx x0, rtx insn, int *pnum_clobbers) 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:30653:12: note: previous declaration is here
static int recog_24 PARAMS ((rtx, rtx, int *));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31215:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31219:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v6; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31226:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( recog_data_0.operand[0] = v9, !ix86_match_ccmode( insn, CCGCmode)) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31227:30: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( result = 219LL, LOWORD( recog_data_0.operand[2]->fld[0].rtuint) == 0x8000) ) 
                             ^~~~~~~~~~~~
                             recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:30843:25: note: expanded from macro 'LOWORD'
#define LOWORD(x) WORDn(x,LOW_IND(x,_WORD))
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:30806:34: note: expanded from macro 'WORDn'
#define WORDn(x, n) (*((_WORD*)&(x)+n))
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31235:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v6; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31242:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v12; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31245:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v13 + 8), recog_data_0.operand[1]) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31246:39: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v13 + 16), recog_data_0.operand[2]) 
                                      ^~~~~~~~~~~~
                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31249:47: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v14 = ix86_binary_operator_ok( MINUS, HImode, recog_data_0.operand); 
                                              ^~~~~~~~~~~~
                                              recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31263:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v15; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31267:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v16; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31277:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v85; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31280:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v31 = recog_data_0.operand[1]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31291:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v19; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31294:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v20 + 8), recog_data_0.operand[1]) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31295:39: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( *( rtx *)( v20 + 16), recog_data_0.operand[2]) 
                                      ^~~~~~~~~~~~
                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31298:46: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v14 = ix86_binary_operator_ok( PLUS, HImode, recog_data_0.operand); 
                                             ^~~~~~~~~~~~
                                             recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/insn-recog.c:31309:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v21; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_24/src/obj/insn-recog.o] Error 1
